# dagster_cicd

./: .gitignore  Makefile  TODO.md  main.py  pyproject.toml  workspace.yaml
.github/workflows/: linting.yml  ruff.yml
dagster_data_eng/: definitions.py
dagster_data_eng/assets/people_asset/: people_asset.py
github-stars/: main.py  pyproject.toml
github-stars/github_stars/: __init__.py  definitions.py
github-stars/github_stars/assets/: github_stars.py
github_stars/: pyproject.toml
