[project]
name = "dagster-cicd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dagster>=1.10.6",
    "mypy>=1.15.0",
    "pandas>=2.2.3",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver>=1.10.6",
    "pytest>=8.3.5",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "dagster_data_eng.definitions"
code_location_name = "dagster_data_eng"
