[project]
name = "github-stars"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dagster>=1.10.7",
    "ipykernel>=6.29.5",
    "jupytext>=1.16.7",
    "matplotlib>=3.10.1",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "pygithub>=2.6.1",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver>=1.10.7",
    "pytest>=8.3.5",
]
